Fix layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,10 @@ button {
 }
 
 .timer-inner-content {
+	display: flex;
+	flex-direction: column;
+	/* justify-content: center; */
+	/* align-items: center; */
 	text-align: center;
 	z-index: 1;
 }
